@@ -20,20 +20,22 @@ package org.apache.solr.security;
 import com.google.common.annotations.VisibleForTesting;
 import java.lang.invoke.MethodHandles;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.cloud.ClusterState;
+import org.apache.solr.common.util.EnvUtils;
 import org.apache.solr.core.NodeConfig;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-/** Validates URLs based on an allow list or a {@link ClusterState} in SolrCloud. */
+/** Validates URLs using an allow-list or a {@link ClusterState} in SolrCloud. */
 public class AllowListUrlChecker {
 
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
@@ -41,12 +43,12 @@ public class AllowListUrlChecker {
   /** {@link org.apache.solr.core.SolrXmlConfig} property to configure the allowed URLs. */
   public static final String URL_ALLOW_LIST = "allowUrls";
 
-  /** System property to disable URL checking and {@link #ALLOW_ALL} instead. */
-  public static final String DISABLE_URL_ALLOW_LIST = "solr.disable." + URL_ALLOW_LIST;
+  /** System property to enable URL checking against an allow-list and ignore {@link #ALLOW_ALL}. */
+  public static final String ENABLE_URL_ALLOW_LIST = "solr.security.allow.urls.enabled";
 
   /** Clue given in URL-forbidden exceptions messages. */
   public static final String SET_SOLR_DISABLE_URL_ALLOW_LIST_CLUE =
-      "Set -D" + DISABLE_URL_ALLOW_LIST + "=true to disable URL allow-list checks.";
+      "Set -D" + ENABLE_URL_ALLOW_LIST + "=false to disable URL allow-list checks.";
 
   /** Singleton checker which allows all URLs. {@link #isEnabled()} returns false. */
   public static final AllowListUrlChecker ALLOW_ALL;
@@ -82,15 +84,20 @@ public class AllowListUrlChecker {
    */
   private static final Pattern PROTOCOL_PATTERN = Pattern.compile("(\\w+)(://.*)");
 
-  /** Allow list of hosts. Elements in the list will be host:port (no protocol or context). */
+  /**
+   * Allow list of hosts. Elements in the list are formatted as host:port (no protocol or context).
+   */
   private final Set<String> hostAllowList;
+
+  private volatile Set<String> liveHostUrlsCache;
+  private volatile Set<String> liveNodesCache;
 
   /**
    * @param urlAllowList List of allowed URLs. URLs must be well-formed, missing protocol is
    *     tolerated. An empty list means there is no explicit allow-list of URLs, in this case no URL
    *     is allowed unless a {@link ClusterState} is provided in {@link #checkAllowList(List,
    *     ClusterState)}.
-   * @throws MalformedURLException If an URL is invalid.
+   * @throws MalformedURLException If a URL is invalid.
    */
   public AllowListUrlChecker(List<String> urlAllowList) throws MalformedURLException {
     hostAllowList = parseHostPorts(urlAllowList);
@@ -100,12 +107,8 @@ public class AllowListUrlChecker {
    * Creates a URL checker based on the {@link NodeConfig} property to configure the allowed URLs.
    */
   public static AllowListUrlChecker create(NodeConfig config) {
-    if (Boolean.getBoolean(DISABLE_URL_ALLOW_LIST)) {
+    if (!EnvUtils.getPropertyAsBool(ENABLE_URL_ALLOW_LIST, true)) {
       return AllowListUrlChecker.ALLOW_ALL;
-    } else if (System.getProperty("solr.disable.shardsWhitelist") != null) {
-      log.warn(
-          "Property 'solr.disable.shardsWhitelist' is deprecated, please use '{}' instead.",
-          DISABLE_URL_ALLOW_LIST);
     }
     try {
       return new AllowListUrlChecker(config.getAllowUrls());
@@ -130,17 +133,16 @@ public class AllowListUrlChecker {
    *
    * @param urls The list of urls to check.
    * @param clusterState The up to date {@link ClusterState}, can be null in case of non-cloud mode.
-   * @throws MalformedURLException If an URL is invalid.
-   * @throws SolrException If an URL is not present in the allow-list or in the provided {@link
+   * @throws MalformedURLException If a URL is invalid.
+   * @throws SolrException If a URL is not present in the allow-list or in the provided {@link
    *     ClusterState}.
    */
   public void checkAllowList(List<String> urls, ClusterState clusterState)
       throws MalformedURLException {
-    Set<String> clusterHostAllowList =
-        clusterState == null ? Collections.emptySet() : clusterState.getHostAllowList();
+    Set<String> liveHostUrls = getLiveHostUrls(clusterState);
     for (String url : urls) {
       String hostPort = parseHostPort(url);
-      if (clusterHostAllowList.stream().noneMatch(hostPort::equalsIgnoreCase)
+      if (liveHostUrls.stream().noneMatch(hostPort::equalsIgnoreCase)
           && hostAllowList.stream().noneMatch(hostPort::equalsIgnoreCase)) {
         throw new SolrException(
             SolrException.ErrorCode.FORBIDDEN,
@@ -152,6 +154,33 @@ public class AllowListUrlChecker {
                 + hostAllowList);
       }
     }
+  }
+
+  /**
+   * Gets the set of live hosts urls (host:port) built from the set of live nodes. The set is cached
+   * to be reused until the live nodes change.
+   */
+  private Set<String> getLiveHostUrls(ClusterState clusterState) {
+    if (clusterState == null) {
+      return Set.of();
+    }
+    if (liveHostUrlsCache == null || clusterState.getLiveNodes() != liveNodesCache) {
+      synchronized (this) {
+        Set<String> liveNodes = clusterState.getLiveNodes();
+        if (liveHostUrlsCache == null || liveNodes != liveNodesCache) {
+          liveHostUrlsCache = buildLiveHostUrls(liveNodes);
+          liveNodesCache = liveNodes;
+        }
+      }
+    }
+    return liveHostUrlsCache;
+  }
+
+  @VisibleForTesting
+  Set<String> buildLiveHostUrls(Set<String> liveNodes) {
+    return liveNodes.stream()
+        .map((liveNode) -> liveNode.substring(0, liveNode.indexOf('_')))
+        .collect(Collectors.toSet());
   }
 
   /** Whether this checker has been created with a non-empty allow-list of URLs. */
@@ -191,16 +220,16 @@ public class AllowListUrlChecker {
     // Parse the host and port.
     // It doesn't really matter which protocol we set here because we are not going to use it.
     url = url.trim();
-    URL u;
+    URI u;
     Matcher protocolMatcher = PROTOCOL_PATTERN.matcher(url);
     if (protocolMatcher.matches()) {
       // Replace any protocol unsupported by URL.
       if (!protocolMatcher.group(1).startsWith("http")) {
         url = "http" + protocolMatcher.group(2);
       }
-      u = new URL(url);
+      u = URI.create(url);
     } else {
-      u = new URL("http://" + url);
+      u = URI.create("http://" + url);
     }
     if (u.getHost() == null || u.getPort() < 0) {
       throw new MalformedURLException("Invalid host or port in '" + url + "'");
