@@ -16,17 +16,15 @@
  */
 package org.apache.solr.client.solrj.request;
 
+import static org.apache.solr.client.solrj.SolrJMetricTestUtils.getPrometheusMetricValue;
 import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.hamcrest.core.Is.is;
 
-import com.codahale.metrics.MetricRegistry;
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
-import org.apache.commons.io.FileUtils;
+import org.apache.commons.io.file.PathUtils;
 import org.apache.lucene.tests.util.LuceneTestCase;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrQuery;
@@ -42,8 +40,6 @@ import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.core.CoreContainer;
 import org.apache.solr.core.SolrCore;
-import org.apache.solr.metrics.SolrCoreMetricManager;
-import org.apache.solr.metrics.SolrMetricManager;
 import org.junit.Test;
 
 public class TestCoreAdmin extends AbstractEmbeddedSolrServerTestCase {
@@ -52,13 +48,13 @@ public class TestCoreAdmin extends AbstractEmbeddedSolrServerTestCase {
   public void testConfigSet() throws Exception {
 
     SolrClient client = getSolrAdmin();
-    File testDir = createTempDir(LuceneTestCase.getTestClass().getSimpleName()).toFile();
-    File newCoreInstanceDir = new File(testDir, "newcore");
-    cores.getAllowPaths().add(testDir.toPath()); // Allow the test dir
+    Path testDir = createTempDir(LuceneTestCase.getTestClass().getSimpleName());
+    Path newCoreInstanceDir = testDir.resolve("newcore");
+    cores.getAllowPaths().add(testDir); // Allow the test dir
 
     CoreAdminRequest.Create req = new CoreAdminRequest.Create();
     req.setCoreName("corewithconfigset");
-    req.setInstanceDir(newCoreInstanceDir.getAbsolutePath());
+    req.setInstanceDir(newCoreInstanceDir.toString());
     req.setConfigSet("configset-2");
 
     CoreAdminResponse response = req.process(client);
@@ -74,45 +70,39 @@ public class TestCoreAdmin extends AbstractEmbeddedSolrServerTestCase {
 
     try (SolrClient client = getSolrAdmin()) {
 
-      File dataDir = createTempDir("data").toFile();
+      Path dataDir = createTempDir("data");
 
-      File newCoreInstanceDir = createTempDir("instance").toFile();
-      cores.getAllowPaths().add(dataDir.toPath()); // Allow the test dir
-      cores.getAllowPaths().add(newCoreInstanceDir.toPath()); // Allow the test dir
+      Path newCoreInstanceDir = createTempDir("instance");
+      cores.getAllowPaths().add(dataDir); // Allow the test dir
+      cores.getAllowPaths().add(newCoreInstanceDir); // Allow the test dir
 
-      File instanceDir = new File(cores.getSolrHome());
-      FileUtils.copyDirectory(instanceDir, new File(newCoreInstanceDir, "newcore"));
+      Path instanceDir = cores.getSolrHome();
+      PathUtils.copyDirectory(instanceDir, newCoreInstanceDir.resolve("newcore"));
 
       CoreAdminRequest.Create req = new CoreAdminRequest.Create();
       req.setCoreName("newcore");
-      req.setInstanceDir(newCoreInstanceDir.getAbsolutePath() + File.separator + "newcore");
-      req.setDataDir(dataDir.getAbsolutePath());
-      req.setUlogDir(new File(dataDir, "ulog").getAbsolutePath());
+      req.setInstanceDir(newCoreInstanceDir.resolve("newcore").toString());
+      req.setDataDir(dataDir.toString());
+      req.setUlogDir(dataDir.resolve("ulog").toString());
       req.setConfigSet("shared");
 
       // These should be the inverse of defaults.
       req.setIsLoadOnStartup(false);
-      req.setIsTransient(true);
       req.process(client);
 
-      // Show that the newly-created core has values for load on startup and transient different
-      // than defaults due to the above.
-      File logDir;
+      // Show that the newly-created core has values for load on startup and transient that differ
+      // from defaults due to the above.
+      Path logDir;
       try (SolrCore coreProveIt = cores.getCore("collection1");
           SolrCore core = cores.getCore("newcore")) {
-
-        assertTrue(core.getCoreDescriptor().isTransient());
-        assertFalse(coreProveIt.getCoreDescriptor().isTransient());
 
         assertFalse(core.getCoreDescriptor().isLoadOnStartup());
         assertTrue(coreProveIt.getCoreDescriptor().isLoadOnStartup());
 
-        logDir = new File(core.getUpdateHandler().getUpdateLog().getLogDir());
+        logDir = Path.of(core.getUpdateHandler().getUpdateLog().getTlogDir());
       }
 
-      assertEquals(
-          new File(dataDir, "ulog" + File.separator + "tlog").getAbsolutePath(),
-          logDir.getAbsolutePath());
+      assertEquals(dataDir.resolve("ulog").resolve("tlog").toString(), logDir.toString());
     }
   }
 
@@ -205,19 +195,20 @@ public class TestCoreAdmin extends AbstractEmbeddedSolrServerTestCase {
           assertTrue(doc.toString(), doc.getFieldValue("id").toString().startsWith("core1-"));
         });
 
-    // assert initial metrics
-    SolrMetricManager metricManager = cores.getMetricManager();
-    String core0RegistryName =
-        SolrCoreMetricManager.createRegistryName(false, null, null, null, "core0");
-    String core1RegistryName =
-        SolrCoreMetricManager.createRegistryName(false, null, null, null, "core1");
-    MetricRegistry core0Registry = metricManager.registry(core0RegistryName);
-    MetricRegistry core1Registry = metricManager.registry(core1RegistryName);
+    // Check initial request counts
+    Double core0InitialRequests =
+        getPrometheusMetricValue(
+            getSolrAdmin(),
+            "solr_core_requests_total{category=\"UPDATE\",core=\"core0\",handler=\"/update\",otel_scope_name=\"org.apache.solr\"}");
+    Double core1InitialRequests =
+        getPrometheusMetricValue(
+            getSolrAdmin(),
+            "solr_core_requests_total{category=\"UPDATE\",core=\"core1\",handler=\"/update\",otel_scope_name=\"org.apache.solr\"}");
 
-    // 2 docs + 1 commit
-    assertEquals(3, core0Registry.counter("UPDATE./update.requests").getCount());
-    // 1 doc + 1 commit
-    assertEquals(2, core1Registry.counter("UPDATE./update.requests").getCount());
+    // 2 docs + 1 commit = 3 requests for core0
+    assertEquals("Initial core0 update requests", 3.0, core0InitialRequests, 0.1);
+    // 1 doc + 1 commit = 2 requests for core1
+    assertEquals("Initial core1 update requests", 2.0, core1InitialRequests, 0.1);
 
     // swap
     CoreAdminRequest.swapCore("core0", "core1", getSolrAdmin());
@@ -242,11 +233,38 @@ public class TestCoreAdmin extends AbstractEmbeddedSolrServerTestCase {
           assertTrue(doc.toString(), doc.getFieldValue("id").toString().startsWith("core0-"));
         });
 
-    core0Registry = metricManager.registry(core0RegistryName);
-    core1Registry = metricManager.registry(core1RegistryName);
+    Double core0PostSwapRequests =
+        getPrometheusMetricValue(
+            getSolrAdmin(),
+            "solr_core_requests_total{category=\"UPDATE\",core=\"core0\",handler=\"/update\",otel_scope_name=\"org.apache.solr\"}");
+    Double core1PostSwapRequests =
+        getPrometheusMetricValue(
+            getSolrAdmin(),
+            "solr_core_requests_total{category=\"UPDATE\",core=\"core1\",handler=\"/update\",otel_scope_name=\"org.apache.solr\"}");
 
-    assertEquals(2, core0Registry.counter("UPDATE./update.requests").getCount());
-    assertEquals(3, core1Registry.counter("UPDATE./update.requests").getCount());
+    // Both cores should have reset metrics after swap (registries recreated)
+    assertEquals("core0 requests should be reset after swap", 0.0, core0PostSwapRequests, 0.1);
+    assertEquals("core1 requests should be reset after swap", 0.0, core1PostSwapRequests, 0.1);
+
+    // Index documents after swap and assert request counts again
+    cli0.add(d);
+    d = new SolrInputDocument("id", "core0-1");
+    cli0.add(d);
+    cli0.commit();
+    d = new SolrInputDocument("id", "core1-0");
+    cli1.add(d);
+    cli1.commit();
+
+    core0PostSwapRequests =
+        getPrometheusMetricValue(
+            getSolrAdmin(),
+            "solr_core_requests_total{category=\"UPDATE\",core=\"core0\",handler=\"/update\",otel_scope_name=\"org.apache.solr\"}");
+    core1PostSwapRequests =
+        getPrometheusMetricValue(
+            getSolrAdmin(),
+            "solr_core_requests_total{category=\"UPDATE\",core=\"core1\",handler=\"/update\",otel_scope_name=\"org.apache.solr\"}");
+    assertEquals("Initial core0 update requests", 3.0, core0PostSwapRequests, 0.1);
+    assertEquals("Initial core1 update requests", 2.0, core1PostSwapRequests, 0.1);
   }
 
   @Test
@@ -264,8 +282,8 @@ public class TestCoreAdmin extends AbstractEmbeddedSolrServerTestCase {
     try {
       cores = CoreContainer.createAndLoad(SOLR_HOME);
 
-      String ddir = CoreAdminRequest.getCoreStatus("core0", getSolrCore0()).getDataDirectory();
-      Path data = Paths.get(ddir, "index");
+      String ddir = CoreAdminRequest.getCoreStatus("core0", getSolrCore0()).dataDir;
+      Path data = Path.of(ddir, "index");
       assumeTrue("test can't handle relative data directory paths (yet?)", data.isAbsolute());
 
       getSolrCore0().add(new SolrInputDocument("id", "core0-1"));
