@@ -16,23 +16,32 @@
  */
 package org.apache.solr.embedded;
 
-import com.codahale.metrics.ConsoleReporter;
-import com.codahale.metrics.MetricFilter;
-import com.codahale.metrics.MetricRegistry;
-import java.io.File;
+import io.prometheus.metrics.expositionformats.PrometheusTextFormatWriter;
+import jakarta.servlet.DispatcherType;
+import jakarta.servlet.Filter;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.FilterConfig;
+import jakarta.servlet.ServletContextEvent;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
+import jakarta.servlet.UnavailableException;
+import jakarta.servlet.http.HttpServlet;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.io.PrintStream;
 import java.lang.invoke.MethodHandles;
 import java.net.BindException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.EnumSet;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -42,59 +51,45 @@ import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
-import javax.servlet.DispatcherType;
-import javax.servlet.Filter;
-import javax.servlet.FilterChain;
-import javax.servlet.FilterConfig;
-import javax.servlet.ServletContextEvent;
-import javax.servlet.ServletException;
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
-import javax.servlet.UnavailableException;
-import javax.servlet.http.HttpServlet;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import org.apache.lucene.util.Constants;
 import org.apache.solr.client.solrj.SolrClient;
+import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.cloud.SocketProxy;
 import org.apache.solr.client.solrj.embedded.SSLConfig;
 import org.apache.solr.client.solrj.impl.HttpSolrClient;
-import org.apache.solr.common.util.NamedList;
-import org.apache.solr.common.util.SimpleOrderedMap;
+import org.apache.solr.client.solrj.request.CoresApi;
 import org.apache.solr.common.util.TimeSource;
+import org.apache.solr.common.util.Utils;
 import org.apache.solr.core.CoreContainer;
-import org.apache.solr.core.SolrCore;
-import org.apache.solr.handler.admin.CoreAdminOperation;
-import org.apache.solr.handler.admin.LukeRequestHandler;
 import org.apache.solr.metrics.SolrMetricManager;
 import org.apache.solr.servlet.CoreContainerProvider;
 import org.apache.solr.servlet.SolrDispatchFilter;
 import org.apache.solr.util.TimeOut;
 import org.apache.solr.util.configuration.SSLConfigurationsFactory;
 import org.eclipse.jetty.alpn.server.ALPNServerConnectionFactory;
+import org.eclipse.jetty.ee10.servlet.FilterHolder;
+import org.eclipse.jetty.ee10.servlet.ServletContextHandler;
+import org.eclipse.jetty.ee10.servlet.ServletHolder;
+import org.eclipse.jetty.ee10.servlet.Source;
 import org.eclipse.jetty.http2.HTTP2Cipher;
 import org.eclipse.jetty.http2.server.HTTP2CServerConnectionFactory;
 import org.eclipse.jetty.http2.server.HTTP2ServerConnectionFactory;
 import org.eclipse.jetty.rewrite.handler.RewriteHandler;
 import org.eclipse.jetty.rewrite.handler.RewritePatternRule;
 import org.eclipse.jetty.server.Connector;
+import org.eclipse.jetty.server.Handler;
 import org.eclipse.jetty.server.HttpConfiguration;
 import org.eclipse.jetty.server.HttpConnectionFactory;
 import org.eclipse.jetty.server.SecureRequestCustomizer;
 import org.eclipse.jetty.server.Server;
 import org.eclipse.jetty.server.ServerConnector;
 import org.eclipse.jetty.server.SslConnectionFactory;
-import org.eclipse.jetty.server.handler.HandlerWrapper;
+import org.eclipse.jetty.server.handler.GracefulHandler;
 import org.eclipse.jetty.server.handler.gzip.GzipHandler;
-import org.eclipse.jetty.server.session.DefaultSessionIdManager;
-import org.eclipse.jetty.servlet.FilterHolder;
-import org.eclipse.jetty.servlet.ServletContextHandler;
-import org.eclipse.jetty.servlet.ServletHolder;
-import org.eclipse.jetty.servlet.Source;
+import org.eclipse.jetty.session.DefaultSessionIdManager;
+import org.eclipse.jetty.util.resource.ResourceFactory;
 import org.eclipse.jetty.util.ssl.SslContextFactory;
 import org.eclipse.jetty.util.thread.QueuedThreadPool;
 import org.eclipse.jetty.util.thread.ReservedThreadExecutor;
-import org.noggit.JSONUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.slf4j.MDC;
@@ -305,7 +300,7 @@ public class JettySolrRunner {
         configuration.addCustomizer(customizer);
         HttpConnectionFactory http1ConnectionFactory = new HttpConnectionFactory(configuration);
 
-        if (config.onlyHttp1 || !Constants.JRE_IS_MINIMUM_JAVA9) {
+        if (config.onlyHttp1) {
           connector =
               new ServerConnector(
                   server,
@@ -348,7 +343,7 @@ public class JettySolrRunner {
       connector.setIdleTimeout(THREAD_POOL_MAX_IDLE_TIME_MS);
 
       server.setConnectors(new Connector[] {connector});
-      server.setSessionIdManager(new DefaultSessionIdManager(server, new Random()));
+      server.addBean(new DefaultSessionIdManager(server, new Random()), true);
     } else {
       HttpConfiguration configuration = new HttpConfiguration();
       ServerConnector connector =
@@ -363,13 +358,13 @@ public class JettySolrRunner {
       server.setConnectors(new Connector[] {connector});
     }
 
-    HandlerWrapper chain;
+    Handler.Wrapper chain;
     {
       // Initialize the servlets
       final ServletContextHandler root =
-          new ServletContextHandler(server, "/solr", ServletContextHandler.SESSIONS);
-      root.setResourceBase(".");
-
+          new ServletContextHandler("/solr", ServletContextHandler.SESSIONS);
+      root.setServer(server);
+      root.setBaseResource(ResourceFactory.of(server).newResource("."));
       root.addEventListener(
           // Install CCP first.  Subclass CCP to do some pre-initialization
           new CoreContainerProvider() {
@@ -420,8 +415,6 @@ public class JettySolrRunner {
     if (config.enableV2) {
       RewriteHandler rwh = new RewriteHandler();
       rwh.setHandler(chain);
-      rwh.setRewriteRequestURI(true);
-      rwh.setRewritePathInfo(false);
       rwh.setOriginalPathAttribute("requestedPath");
       rwh.addRule(new RewritePatternRule("/api/*", "/solr/____v2"));
       chain = rwh;
@@ -434,13 +427,18 @@ public class JettySolrRunner {
     gzipHandler.setIncludedMethods("GET");
 
     server.setHandler(gzipHandler);
+
+    // Mimic "graceful.mod"
+    GracefulHandler graceful = new GracefulHandler();
+    server.insertHandler(graceful);
+    server.setStopTimeout(15 * 1000);
   }
 
   /**
    * descendants may inject own handler chaining it to the given root and then returning that own
    * one
    */
-  protected HandlerWrapper injectJettyHandlers(HandlerWrapper chain) {
+  protected Handler.Wrapper injectJettyHandlers(Handler.Wrapper chain) {
     return chain;
   }
 
@@ -675,11 +673,11 @@ public class JettySolrRunner {
     }
   }
 
-  public void outputMetrics(File outputDirectory, String fileName) throws IOException {
+  public void outputMetrics(Path outputDirectory, String fileName) throws IOException {
     if (getCoreContainer() != null) {
 
       if (outputDirectory != null) {
-        Path outDir = outputDirectory.toPath();
+        Path outDir = outputDirectory;
         Files.createDirectories(outDir);
       }
 
@@ -687,21 +685,14 @@ public class JettySolrRunner {
 
       Set<String> registryNames = metricsManager.registryNames();
       for (String registryName : registryNames) {
-        MetricRegistry metricsRegisty = metricsManager.registry(registryName);
-        try (PrintStream ps =
-            outputDirectory == null
-                ? new PrintStream(OutputStream.nullOutputStream(), false, StandardCharsets.UTF_8)
-                : new PrintStream(
-                    new File(outputDirectory, registryName + "_" + fileName),
-                    StandardCharsets.UTF_8)) {
-          ConsoleReporter reporter =
-              ConsoleReporter.forRegistry(metricsRegisty)
-                  .convertRatesTo(TimeUnit.SECONDS)
-                  .convertDurationsTo(TimeUnit.MILLISECONDS)
-                  .filter(MetricFilter.ALL)
-                  .outputTo(ps)
-                  .build();
-          reporter.report();
+        var prometheusReader = metricsManager.getPrometheusMetricReader(registryName);
+        if (prometheusReader != null) {
+          try (OutputStream os =
+              outputDirectory == null
+                  ? OutputStream.nullOutputStream()
+                  : Files.newOutputStream(outputDirectory.resolve(registryName + "_" + fileName))) {
+            new PrometheusTextFormatWriter(false).write(os, prometheusReader.collect());
+          }
         }
       }
 
@@ -712,21 +703,14 @@ public class JettySolrRunner {
 
   public void dumpCoresInfo(PrintStream pw) throws IOException {
     if (getCoreContainer() != null) {
-      List<SolrCore> cores = getCoreContainer().getCores();
-      for (SolrCore core : cores) {
-        NamedList<Object> coreStatus =
-            CoreAdminOperation.getCoreStatus(getCoreContainer(), core.getName(), false);
-        core.withSearcher(
-            solrIndexSearcher -> {
-              SimpleOrderedMap<Object> lukeIndexInfo =
-                  LukeRequestHandler.getIndexInfo(solrIndexSearcher.getIndexReader());
-              Map<String, Object> indexInfoMap = coreStatus.toMap(new LinkedHashMap<>());
-              indexInfoMap.putAll(lukeIndexInfo.toMap(new LinkedHashMap<>()));
-              pw.println(JSONUtil.toJSON(indexInfoMap, 2));
-
-              pw.println();
-              return null;
-            });
+      final var coreStatusReq = new CoresApi.GetAllCoreStatus();
+      coreStatusReq.setIndexInfo(true);
+      try (final var client = newClient()) {
+        final var coreStatusRsp = coreStatusReq.process(client);
+        Utils.writeJson(coreStatusRsp, pw, true);
+      } catch (SolrServerException | IOException e) {
+        // Worth logging but not re-throwing
+        log.error("Unable to dump info for all cores", e);
       }
     }
   }
@@ -782,7 +766,9 @@ public class JettySolrRunner {
   /** Returns a base URL like {@code http://localhost:8983/solr} */
   public URL getBaseUrl() {
     try {
-      return new URL(protocol, host, jettyPort, "/solr");
+      return new URI(protocol, null, host, jettyPort, "/solr", null, null).toURL();
+    } catch (URISyntaxException e) {
+      throw new RuntimeException(e);
     } catch (MalformedURLException e) {
       throw new RuntimeException(e);
     }
@@ -790,8 +776,10 @@ public class JettySolrRunner {
 
   public URL getBaseURLV2() {
     try {
-      return new URL(protocol, host, jettyPort, "/api");
+      return new URI(protocol, null, host, jettyPort, "/api", null, null).toURL();
     } catch (MalformedURLException e) {
+      throw new RuntimeException(e);
+    } catch (URISyntaxException e) {
       throw new RuntimeException(e);
     }
   }
@@ -802,8 +790,10 @@ public class JettySolrRunner {
    */
   public URL getProxyBaseUrl() {
     try {
-      return new URL(protocol, host, getLocalPort(), "/solr");
+      return new URI(protocol, null, host, getLocalPort(), "/solr", null, null).toURL();
     } catch (MalformedURLException e) {
+      throw new RuntimeException(e);
+    } catch (URISyntaxException e) {
       throw new RuntimeException(e);
     }
   }
